# veridict

./: .gitignore  LICENSE  LIMITATIONS.md  README.md  action.yml  pyproject.toml  stress_hook.py  stress_v2.py
.github/workflows/: ci.yml  veridict.example.yml
examples/: chain.example.jsonl  claude_md_compliance.py
tests/: test_v2.py  test_veridict.py
veridict/: __init__.py  __main__.py  cert.py  checkers.py  claude_md.py  cli.py  core.py  coverage.py  demo.py  extract.py  hook.py  install.py  mcp.py  output.py  recorder.py  report.py
