[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "veridict"
version = "0.1.0"
description = "Verify an AI agent actually did what it claimed — a CI gate that checks claimed actions against ground truth."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "curagus" }]
keywords = ["ai-agents", "verification", "observability", "ci", "llm", "autonomous", "agent-reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
veridict = "veridict.cli:main"

[tool.setuptools.packages.find]
include = ["veridict*"]
